--- a/PortfolioProjectMVC/wwwroot/css/site.css
+++ b/PortfolioProjectMVC/wwwroot/css/site.css
@@ -121,6 +121,7 @@ body {
 }
 
 .row-formatting {
+    max-height: 550px;
     row-gap: 20px;
 }
 
@@ -158,21 +159,6 @@ body {
     }
 
 }
-
-@media (max-width: 1200px) {
-    .project-image-size {
-        position: relative;
-        max-width: 450px;
-    }
-
-    .bottom-image {
-        z-index: 1;
-        top: -150px;
-        left: 25px;
-        margin-right: 30px;
-    }
-}
-
 
 @media (max-width: 1150px) {
     .project-image-size {
